# mcp-watchdog

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  rules.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
demo/: malicious_server.py  normal_server.py  run_demo.py
mcp_trident/: __init__.py  cli.py  logger.py  proxy.py  report.py  rules.py
mcp_watchdog/: __init__.py  cli.py  logger.py  proxy.py  report.py  rules.py
tests/: test_rules.py
